testsuite/bsc.names/portRenaming/invalidAttrs/port/Keyword.bsv

interface Ifc;
 (* prefix="" *)
 method Action check ((* port="always" *)Bool x);
endinterface

(* synthesize *) 
module mkKeyword (Ifc);
endmodule
